--- a/circles.html
+++ b/circles.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Circles</title>
     <script src="paper-full.js" type="text/javascript"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.1/howler.js"></script>
     <script type="text/paperscript" canvas="myCanvas">
 	<!--// Create a Paper.js Path to draw a line into it:-->
 	<!--var path = new Path();-->
@@ -24,8 +25,14 @@
             <!--myCircle.fillColor = 'purple';-->
 	    <!--}-->
 	<!--}-->
+
+	var sound = new Howl({
+      src: ['sound/bubbles.mp3']
+    });
+
 	var circlesArr = [];
 	function onKeyDown(event){
+	    sound.play();
 	    var maxPoint = new Point(view.size.width,view.size.height);
 	    var randPoint = Point.random();
 	    var point = maxPoint * randPoint;
@@ -39,6 +46,7 @@
             circlesArr[i].fillColor.hue += 1;
             circlesArr[i].scale(.9);
         }
+
 	}
 
     </script>
