--- a/circles.html
+++ b/circles.html
@@ -9,36 +9,178 @@
     <script src="paper-full.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.1/howler.js"></script>
     <script type="text/paperscript" canvas="myCanvas">
-	<!--// Create a Paper.js Path to draw a line into it:-->
-	<!--var path = new Path();-->
-	<!--// Give the stroke a color-->
-	<!--path.strokeColor = 'black';-->
-	<!--var start = new Point(100, 100);-->
-	<!--// Move to start and draw a line from there-->
-	<!--path.moveTo(start);-->
-	<!--// Note the plus operator on Point objects.-->
-	<!--// PaperScript does that for us, and much more!-->
-	<!--path.lineTo(start + [ 100, -50 ]);-->
-	<!--for(var i = 0; i<1001; i+=100) {-->
-	    <!--for(var j=0; j<1001; j+=100) {-->
-	        <!--var myCircle = new Path.Circle(new Point(i, j), 10);-->
-            <!--myCircle.fillColor = 'purple';-->
-	    <!--}-->
-	<!--}-->
 
-	var sound = new Howl({
-      src: ['sound/bubbles.mp3']
-    });
+    var data = {
+        q: {
+            color: '#1abc9c',
+            sound: new Howl({
+              src: ['sound/bubbles.mp3']
+            })
+        },
+        w: {
+            color: '#2ecc71',
+            sound: new Howl({
+              src: ['sound/clay.mp3']
+            })
+        },
+        e: {
+            color: '#3498db',
+            sound: new Howl({
+              src: ['sound/confetti.mp3']
+            })
+        },
+        r: {
+            color: '#9b59b6',
+            sound: new Howl({
+              src: ['sound/corona.mp3']
+            })
+        },
+        t: {
+            color: '#34495e',
+            sound: new Howl({
+              src: ['sound/dotted-spiral.mp3']
+            })
+        },
+        y: {
+            color: '#16a085',
+            sound: new Howl({
+              src: ['sound/flash-1.mp3']
+            })
+        },
+        u: {
+            color: '#27ae60',
+            sound: new Howl({
+              src: ['sound/flash-2.mp3']
+            })
+        },
+        i: {
+            color: '#2980b9',
+            sound: new Howl({
+              src: ['sound/flash-3.mp3']
+            })
+        },
+        o: {
+            color: '#8e44ad',
+            sound: new Howl({
+              src: ['sound/glimmer.mp3']
+            })
+        },
+        p: {
+            color: '#2c3e50',
+            sound: new Howl({
+              src: ['sound/moon.mp3']
+            })
+        },
+        a: {
+            color: '#f1c40f',
+            sound: new Howl({
+              src: ['sound/pinwheel.mp3']
+            })
+        },
+        s: {
+            color: '#e67e22',
+            sound: new Howl({
+              src: ['sound/piston-1.mp3']
+            })
+        },
+        d: {
+            color: '#e74c3c',
+            sound: new Howl({
+              src: ['sound/piston-2.mp3']
+            })
+        },
+        f: {
+            color: '#95a5a6',
+            sound: new Howl({
+              src: ['sound/prism-1.mp3']
+            })
+        },
+        g: {
+            color: '#f39c12',
+            sound: new Howl({
+              src: ['sound/prism-2.mp3']
+            })
+        },
+        h: {
+            color: '#d35400',
+            sound: new Howl({
+              src: ['sound/prism-3.mp3']
+            })
+        },
+        j: {
+            color: '#1abc9c',
+            sound: new Howl({
+              src: ['sound/splits.mp3']
+            })
+        },
+        k: {
+            color: '#2ecc71',
+            sound: new Howl({
+              src: ['sound/squiggle.mp3']
+            })
+        },
+        l: {
+            color: '#3498db',
+            sound: new Howl({
+              src: ['sound/bubbles.mp3']
+            })
+        },
+        z: {
+            color: '#9b59b6',
+            sound: new Howl({
+              src: ['sound/suspension.mp3']
+            })
+        },
+        x: {
+            color: '#34495e',
+            sound: new Howl({
+              src: ['sound/timer.mp3']
+            })
+        },
+        c: {
+            color: '#16a085',
+            sound: new Howl({
+              src: ['sound/ufo.mp3']
+            })
+        },
+        v: {
+            color: '#27ae60',
+            sound: new Howl({
+              src: ['sound/veil.mp3']
+            })
+        },
+        b: {
+            color: '#2980b9',
+            sound: new Howl({
+              src: ['sound/wipe.mp3']
+            })
+        },
+        n: {
+            color: '#8e44ad',
+            sound: new Howl({
+              src: ['sound/zig-zag.mp3']
+            })
+        },
+        m: {
+            color: '#2c3e50',
+            sound: new Howl({
+              src: ['sound/moon.mp3']
+            })
+        }
+    };
+
 
 	var circlesArr = [];
 	function onKeyDown(event){
-	    sound.play();
-	    var maxPoint = new Point(view.size.width,view.size.height);
-	    var randPoint = Point.random();
-	    var point = maxPoint * randPoint;
-	    var myCircle = new Path.Circle(point, 500);
-        myCircle.fillColor = 'green';
-        circlesArr.push(myCircle);
+	    if(data.hasOwnProperty(event.key)) {
+	        data[event.key].sound.play();
+            var maxPoint = new Point(view.size.width,view.size.height);
+            var randPoint = Point.random();
+            var point = maxPoint * randPoint;
+            var myCircle = new Path.Circle(point, 500);
+            myCircle.fillColor = data[event.key].color;
+            circlesArr.push(myCircle);
+	    }
 	}
 	//console.log(circlesArr);
 	function onFrame(event) {
@@ -46,7 +188,10 @@
             circlesArr[i].fillColor.hue += 1;
             circlesArr[i].scale(.9);
         }
-
+        //clear Array after some time
+        if(circlesArr.length >100) {
+	        circlesArr.shift();
+	    }
 	}
 
     </script>
